--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron ."
   },
   "dependencies": {
+    "@blueprintjs/core": "^5.10.2",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
+    "node-pty": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,7 +26,9 @@
     "@types/react-dom": "^18.2.25",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.1",
-    "electron": "^30.0.3",
+    "electron": "^29.3.0",
+    "electron-build": "^0.0.3",
+    "electron-rebuild": "^3.2.9",
     "electron-reload": "^2.0.0-alpha.1",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
