--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "electron-react-ts",
   "version": "0.0.0",
   "description": "AiTerm",
-  "license": "",
+  "license": "MIT",
   "author": "",
   "main": "dist/main.js",
   "scripts": {
@@ -10,50 +10,46 @@
     "build": "rimraf dist && cross-env NODE_ENV=\"production\" webpack --progress",
     "dev:tsc": "tsc -w -p tsconfig.node.json",
     "dev:webpack": "cross-env NODE_ENV=\"development\" webpack --progress",
-    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron ."
+    "dev:electron": "wait-on ./dist/index.html ./dist/main.js && cross-env NODE_ENV=\"development\" electron .",
+    "rebuild": "electron-rebuild"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.19.0",
-    "@blueprintjs/select": "^5.3.20",
-    "@langchain/anthropic": "^0.3.20",
-    "@langchain/community": "^0.3.43",
-    "@langchain/openai": "^0.5.10",
+    "@blueprintjs/core": "4.17.8",
+    "@blueprintjs/select": "4.9.11",
+    "@types/ws": "^8.18.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
     "child_process": "^1.0.2",
-    "highlight.js": "^11.11.1",
-    "langchain": "^0.3.26",
-    "markd": "^1.2.0",
-    "markdown-to-jsx": "^7.7.6",
-    "marked-react": "^3.0.0",
-    "node-pty": "^1.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "rehype-highlight": "^7.0.2",
+    "highlight.js": "^11.9.0",
+    "markdown-to-jsx": "^7.4.7",
+    "node-pty": "^0.10.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^7.0.0",
     "rehype-react": "^8.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.0",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@electron/rebuild": "^3.6.0",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.61",
+    "@types/react-dom": "^18.2.19",
     "cross-env": "^7.0.3",
-    "css-loader": "^7.1.2",
-    "electron": "^36.2.1",
-    "electron-build": "^0.0.3",
-    "electron-rebuild": "^3.2.9",
+    "css-loader": "^6.10.0",
+    "electron": "^29.1.0",
     "electron-reload": "^2.0.0-alpha.1",
-    "html-webpack-plugin": "^5.6.3",
-    "mini-css-extract-plugin": "^2.9.2",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.1",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^6.0.1",
-    "ts-loader": "^9.5.2",
+    "rimraf": "^5.0.5",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "wait-on": "^8.0.3",
-    "webpack": "^5.99.8",
-    "webpack-cli": "^6.0.1"
+    "typescript": "^5.3.3",
+    "wait-on": "^7.2.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
