--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "child_process": "^1.0.2",
     "highlight.js": "^11.9.0",
     "markdown-to-jsx": "^7.4.7",
-    "ollama": "^0.5.15",
+    "node-pty": "^0.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
